Implement various enhancements including keyboard shortcuts, genre color mapping, and UI updates for settings and book details

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookTrack - Deine persönliche Leseübersicht</title>
     <meta name="description" content="Verfolge deine Lesefortschritte, organisiere deine Bücher und sammle inspirierende Zitate mit BookTrack - der eleganten Bücher-Tracking-App" />
